# rocket-league-bot

./: .gitignore  README.md  benchmark.py  bot.py  justfile  profile_training.py  pyproject.toml  train.py  train_fast.py  watch.py
docs/: observation_state.md
src/: __init__.py  config.py  env.py  rewards.py  vec_env.py
